# qbasic

./: CMakeLists.txt  README.md  cmd_executor.cpp  cmd_executor.h  interpret_test.cpp  interpret_test.h  interpreter.cpp  interpreter.h  main.cpp  main_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.h  parser.cpp  parser.h  parser_test.cpp  parser_test.h  tokenizer.cpp  tokenizer.h  tokenizer_test.cpp  tokenizer_test.h  util.h
assets/: help-zh.md  help.md
programs/: error.bas  even_or_odd.bas  factorial.bas  invalid_line.bas  is_prime.bas  sum_of_1ton.bas  test.bas  unsorted.bas
readme/: README.zh_CN.md
